# approvals-concept-parrots

./: .gitignore  README.md  __init__-prompt_claude_code.approved.pickle  __init__-prompt_claude_code.approved.txt  analytics_system-generate_summary.approved.pickle  analytics_system-generate_summary.approved.txt  analytics_system.py  conftest.py  database_service.py  eval_claude_code-generate_claude_code.approved.pickle  eval_claude_code-generate_claude_code.approved.txt  eval_claude_code.py  fizzbuzz-is_divisible_by.approved.pickle  fizzbuzz-is_divisible_by.approved.txt  fizzbuzz.py  main.py  math_operations-add.approved.pickle  math_operations-add.approved.txt  math_operations-divide.approved.pickle  math_operations-divide.approved.txt  math_operations-multiply.approved.pickle  math_operations-multiply.approved.txt  math_operations.py  parrot.py  plan.md  prompt_claude_code-prompt_claude_code.approved.pickle  prompt_claude_code-prompt_claude_code.approved.txt  prompt_claude_code.py  prompt_claude_code.py.cache.db  pyproject.toml  scripts.py  test_analytics_system.py  test_database_service.py  test_eval_claude_code.py  test_eval_claude_code.test_eval_claude_code_calculator.approved.txt  test_eval_claude_code.test_eval_claude_code_dictionary.approved.txt  test_eval_claude_code.test_eval_claude_code_factorial.approved.txt  test_eval_claude_code.test_eval_claude_code_fibonacci.approved.txt  test_eval_claude_code.test_eval_claude_code_hello_world.approved.txt  test_eval_claude_code.test_eval_claude_code_list_comprehension.approved.txt  (+7 more)
commands/: check.py  lint.py  test.py  (+2 more)
(+12 files in other folders)
