[project]
name = "approvals-concept-parrots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "approvaltests>=15.3.2",
    "filecache>=0.81",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[project.scripts]
lint = "commands.lint:main"
typecheck = "commands.typecheck:main"
typecheck-strict = "commands.typecheck_strict:main"
test = "commands.test:main"
check = "commands.check:main"

[dependency-groups]
dev = [
    "pyright>=1.1.405",
]

[tool.pyright]
typeCheckingMode = "strict"
